--- a/screen.css
+++ b/screen.css
@@ -14,7 +14,7 @@ html, body{
 header{
     height: 90px;
     padding: 10px;
-    background-color: darkgray;
+    background-color: #5E6E84;
     display: flex;
     justify-content: space-between;
 
@@ -45,27 +45,100 @@ header{
     height: 600px;
     background-color: lightgray;
     position: relative;
+    background-image: url('images/moonriver.jpg');
+    background-position: 0 34%;
+    background-size: cover;
 }
-    /* Image on the background*/
-.background_image{
+    /* background*/
+.background{
     margin: 0;
     position: absolute;
     width: 100%;
     height: 600px;
 }
         /* small profile image over the background */
-.profile_image{
+.profile_container{
     margin: 0;
-    position: absolute;
-    bottom: 0;
-    left: 45%;
+    position: relative;
+    top: 25%;
+    width: fit-content;
+    height: fit-content;
+    border-radius: 100%;
 }
+            /* transparent overlay */
+.profile_overlay{
+    position: absolute;
+    background-color: gray;
+    border-radius: 100em;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+            /* overlay text */
+.profile_overlay h2{
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    margin: 0;
+    font-size: 3em;
+    cursor: default;
+}
+
+.profile_container:hover .profile_overlay {
+    opacity: 0.3;
+  }
+
         /* button that goes to resume */
 .resume{
-    position: absolute;
-    bottom: 10px;
-    right: 20px;
+    position: relative;
+    top: 50%;
+    background-color: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 23rem;
+    box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+    box-sizing: border-box;
+    color: rgba(0, 0, 0, 0.85);
+    cursor: pointer;
+    display: inline-flex;
+    font-size: 16px;
+    font-weight: 600;
+    justify-content: center;
+    line-height: 1.25;
+    margin: 0;
+    min-height: 3rem;
+    padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+    position: relative;
+    text-decoration: none;
+    transition: all 250ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: baseline;
+    width: auto;
+    }
+    
+.resume:hover,
+.resume:focus {
+    border-color: rgba(0, 0, 0, 0.15);
+    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+    color: rgba(0, 0, 0, 0.65);
 }
+
+.resume:hover {
+    transform: translateY(-1px);
+}
+
+.resume:active {
+    background-color: #F0F0F1;
+    border-color: rgba(0, 0, 0, 0.15);
+    box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
+    color: rgba(0, 0, 0, 0.65);
+    transform: translateY(0);
+}
+
 
 /* Intro Image */
 
@@ -73,8 +146,8 @@ header{
 
 /* Prior Work Block */
 .prior_work_block{
-    background-color: gray;
-    height: 1280px;
+    background-color: #ECECEC;
+    height: auto;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -90,16 +163,37 @@ header{
     /* Image blocks: design, software, datavis */
 .skill_block{
     display: flex;
+    background-color: white;
+    border-top-right-radius: 6rem;
+    border-bottom-right-radius: 6rem;
+    margin-left: -20px;
+    padding: 20px;
+    padding-right: 100px;
+    width: 80%;
 }
 
 .skill_image{
-    width: 560px;
-    height: 280px;
-    background-color: white;
+    min-width: 700px;
+    height: 400px;
+    background-color: #33486D;
+    border-radius: 6rem;
+}
+
+.skill_block_text{
+    font-size: x-large;
+    line-height: 40px;
 }
 
 #software{
     align-self: flex-end;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-top-left-radius: 6rem;
+    border-bottom-left-radius: 6rem;
+    margin-left: 20px;
+    margin-right: -20px;
+    padding-right: 0;
+    padding-left: 100px;
 }
 
 /* Prior Work Block */
