--- a/screen.css
+++ b/screen.css
@@ -10,6 +10,13 @@ html, body{
     max-height: 100%;
 }
 
+/* Link style */
+a{
+    color: #33486D;
+    text-decoration: none;
+}
+
+
 /* Header */
 header{
     height: 90px;
@@ -24,6 +31,15 @@ header{
 .title_name{
     margin: 0;
     font-size: 64px;
+    color: black;
+}
+
+#title_name{
+    color: black;
+}
+
+.title_name:hover{
+    cursor: pointer;
 }
 
 
@@ -40,61 +56,25 @@ header{
 
 
 
-/* Intro Image */
+/* Hero Image */
 .intro_block{
     height: 600px;
     background-color: lightgray;
-    position: relative;
     background-image: url('images/moonriver.jpg');
     background-position: 0 34%;
     background-size: cover;
 }
-    /* background*/
-.background{
-    margin: 0;
+    /* Profile Image */
+.profile_image{
     position: absolute;
-    width: 100%;
-    height: 600px;
+    left: 45%;
+    top: 200px;
 }
-        /* small profile image over the background */
-.profile_container{
-    margin: 0;
-    position: relative;
-    top: 25%;
-    width: fit-content;
-    height: fit-content;
-    border-radius: 100%;
-}
-            /* transparent overlay */
-.profile_overlay{
-    position: absolute;
-    background-color: gray;
-    border-radius: 100em;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
-            /* overlay text */
-.profile_overlay h2{
-    position: absolute;
-    top: 40%;
-    left: 20%;
-    margin: 0;
-    font-size: 3em;
-    cursor: default;
-}
-
-.profile_container:hover .profile_overlay {
-    opacity: 0.3;
-  }
-
-        /* button that goes to resume */
+    /* Resume Button */
 .resume{
     position: relative;
     top: 50%;
+    left: 45%;
     background-color: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 23rem;
@@ -108,6 +88,7 @@ header{
     justify-content: center;
     line-height: 1.25;
     margin: 0;
+    margin-left: 45px;
     min-height: 3rem;
     padding: calc(.875rem - 1px) calc(1.5rem - 1px);
     position: relative;
@@ -140,7 +121,7 @@ header{
 }
 
 
-/* Intro Image */
+/* Hero Image*/
 
 
 
@@ -176,6 +157,7 @@ header{
 
 .skill_block:hover {
     transform: translateY(-5px);
+    cursor: pointer;
 }
 
 .skill_image{
@@ -183,6 +165,10 @@ header{
     height: 400px;
     background-color: #33486D;
     border-radius: 6rem;
+}
+
+#design_cover{
+    background-image: url("images/fantasy_football_cover.png");
 }
 
 .skill_block_text{
@@ -203,3 +189,21 @@ header{
 }
 
 /* Prior Work Block */
+
+
+
+
+
+/* Footer */
+footer{
+    background-color: #5E6E84;
+    height: 90px;
+    padding: 10px;
+}
+
+.social-icons{
+    display: flex;
+}
+
+/* Footer */
+
