--- a/screen.css
+++ b/screen.css
@@ -12,15 +12,22 @@ html, body{
 
 /* Link style */
 a{
-    color: #33486D;
+    color: #06132C;
     text-decoration: none;
+    transition: all 150ms;
+}
+
+a:hover{
+    color:#33486D
 }
 
 
 /* Header */
 header{
-    height: 90px;
-    padding: 10px;
+    height: 80px;
+    padding: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
     background-color: #5E6E84;
     display: flex;
     justify-content: space-between;
@@ -49,8 +56,10 @@ header{
     gap: 10px;
     list-style-type: none;
     font-size: 40px;
-    
+    justify-content: flex-start;
+    align-items: center;
 }
+
 /* Header */
 
 
@@ -199,11 +208,26 @@ footer{
     background-color: #5E6E84;
     height: 90px;
     padding: 10px;
+    padding-bottom: 25px;
 }
-
+    /* Social Media Icons */
 .social-icons{
     display: flex;
+    list-style: none;
+    gap: 20px;
 }
+
+.indiv_icons:hover{
+    transform: translateY(-5px);
+    transition: all 250ms;
+
+}
+
+.social-icons img{
+    width: 70px;
+    height: 70px;
+}
+
 
 /* Footer */
 
