--- a/screen.css
+++ b/screen.css
@@ -75,15 +75,14 @@ header{
 }
     /* Profile Image */
 .profile_image{
-    position: absolute;
-    left: 45%;
-    top: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 40px;
 }
     /* Resume Button */
 .resume{
-    position: relative;
-    top: 50%;
-    left: 45%;
+    left: 42.75%;
     background-color: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 23rem;
